- Fix NoSuchMethodException - Add test to the View method